--- a/css/active_collab_style.css
+++ b/css/active_collab_style.css
@@ -1,300 +1,19 @@
-body {
-    margin:0;
-    padding:0;
-    font-family: adelle-sans,"Helvetica Neue",Arial,sans-serif;
-    line-height: 1.5;
+.header {
+	background: #e9edf2;
+	margin-left: ;
+	padding-top:15px;
 }
 
-h1 {
-    font-size:42px;
-    font-weight: 300;
-    text-align: center;    
+.features-l img {
+	display:block;
+	float:left;
+	margin-top:-10px;
 }
 
-h2 {
-    font-size: 32px;
-    font-weight: 300;
+.features-l {
+	padding-top: 8px;
 }
 
-nav {
-    position: fixed;
-    top:0;
-    left:0;
-    background-color: #E9EDF2;
-    width: 100%;
+.titre_page {
+	padding-bottom: 15px;
 }
-
-header {
-    background-color: #E9EDF2;
-    height:200px;
-    text-align: center;
-}
-
-.titleStyle {
-    height:100px;
-    padding-top:50px;
-}
-
-#firstDiv {
-    background-color: #3F4655;
-    height:300px;
-    max-width: 100%;
-    width: 1280px;
-    font-size:16px;
-    text-align: center;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-.featuresDiv {
-    display: block;
-    float: left;
-    width: 24%;
-    height: 299px;
-    color: #FFF;
-    border: 1px solid black;
-}
-
-.featuresDiv:nth-child(1) {
-    border-left: none;
-    border-right: none;
-}
-
-.featuresDiv:nth-child(2) {
-    border-right: none;
-}
-.featuresDiv:nth-child(3) {
-    border-right: none;
-}
-.featuresDiv:nth-child(4) {
-    border-right: none;
-}
-
-.featuresDiv:hover {
-    background-color: #3A404D;
-}
-
-.imgFeatures {
-    width: 100px;
-    height: auto;
-}
-
-#sectionTryIt {
-    background-color: #E9EDF2;
-    text-align: center;
-}
-
-#whoActive {
-    background-color: #E9EDF2;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    text-align: center;
-    height: 380px;
-    border-top:1px solid #D9D9D9;
-    border-bottom: 1px solid #D9D9D9;
-
-}
-
-#sectionForm {
-    text-align: center;
-}
-
-footer {
-    background-color: #3F4655;  
-    color: #FFF;
-    font-size:14px;
-    height:410px;
-}
-
-.menusFooter {
-    float:left;
-    padding-top: 20px;   
-}
-
-.menusFooter > a:link {
-    text-decoration: none;
-}
-
-.socialNetwork {
-    clear: both;
-    display: block;
-    padding-top: 10px;
-    text-align: center;
-}
-
-.socialNetworkList {
-    display: inline-block;
-    padding-left: 10px;
-}
-
-#socialNetid {
-    padding: 0;
-}
-
-#socialNetid > a {
-    color: #FFF;
-    text-decoration: none;
-}
-
-.greyBox {
-    height: 40px;
-    color: #9EA2A9;
-    text-align: center;
-    font-weight: 200;
-}
-
-.greyBox > a {
-    color: #9EA2A9;
-}
-
-#cloudServer {
-    text-align: center;
-    height: 650px;
-}
-
-.paragraphChanges {
-    font-size:21px;
-    font-weight: 300;
-    margin-left: auto;
-    margin-right: auto;
-    width: 700px;
-
-}
-
-.screenshotBigBox {
-    background: url(img/background-screenshot.png) no-repeat 50% 50%;
-    background-size: 1610px 250px;
-}
-
-.screenshotBox > img {
-    margin-bottom: -5px;
-}
-
-.boxServerCloud {
-    display: inline-block;
-    width: 350px;
-}
-
-#boxServerCloudid {
-    border-left:1px solid #D9D9D9;
-}
-
-li {
-    list-style: none;
-}
-
-.liHead {
-    padding-top:5px;
-    color: #9EA2A9;
-    opacity: 0.5;
-}
-
-.liFooter {
-    padding-top: 5px;
-    color: #FFF;
-}
-
-#logoNav {
-    float: left;
-    padding-top: 15px;
-    padding-left: 15px;
-    padding-right: 20px;
-}
-
-#navList {
-    margin-top: 20px;
-}
-
-#navList > a {
-    text-decoration: none;
-    color: #000;
-}
-
-.menuLeft, .menuRight {
-    display: inline-block;
-    padding-left: 20px;
-}
-
-.menuLeft {
-    float: left;
-}
-
-.menuRight {
-    float: right;
-}
-
-form {
-    height:300px;
-    width: 500px;
-    background-color: #E9EDF2;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top:80px;
-    border:1px solid black;
-    border-radius: 5px;
-}
-
-input {
-    width: 300px;
-    height: 30px;
-}
-
-.buttonBlue {
-    background-color: #3F9BF8;
-    color: #FFF;
-    border:1px solid black;
-    border-radius:5px;
-    height:50px;
-    width:230px;
-    font-size:17px;    
-}
-
-.buttonBlueCloudServer {
-    background-color: #3F9BF8;
-    color: #FFF;
-    border:1px solid black;
-    border-radius:5px;
-    height:40px;
-    width:160px;
-    font-size:14px;    
-}
-
-#sendButton {
-    background-color: #3F9BF8;
-    color: #FFF;
-    border:1px solid black;
-    border-radius:5px;
-    height:40px;
-    width:200px;
-    font-size:15px;    
-}
-
-/* class et id : double bouton de la navbar */ 
-
-.btn-group {
-    margin: -5px 15px 0 20px;
-    float:left;
-}
-
-#buttonMenuLeft {
-    background-color: #3F9BF8;
-    border: 1px solid black;
-    border-right: none;
-    color: #FFF;
-    padding:8px 25px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    font-size: 14px;
-}
-
-#buttonMenuRight {
-    background-color: #FFF;
-    border:1px solid black;
-    padding:8px 25px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;    
-    font-size: 14px;
-
-}
-
-
