--- a/css/style_simple.css
+++ b/css/style_simple.css
@@ -22,6 +22,7 @@ p {
 	line-height: 1.58;
 	font-size:21px;
 	font-family: 'Tinos', serif;
+	margin-top: 14px;
 }
 
 img {
@@ -35,14 +36,15 @@ img {
 	margin-left: -2.5px;
 	line-height: 1.04;
 	color:rgba(0,0,0,.8);
+	margin-bottom: 5px;
 }
 
-.auteur {
+a {
 	text-decoration: none;
 	color:rgba(0,0,0,.66);
 }
 
-.auteur:hover {
+a:hover {
 	color:rgba(0,0,0,.9);
 }
 
@@ -64,4 +66,17 @@ img {
     display: block;
     position: relative;
     float: left;
+}
+
+.bout_code {
+	text-align:left;	
+}
+
+pre {
+	position:relative;
+	top:0;
+}
+
+.source {
+	font-size: 14px;
 }
